src/test/ui/libstd-case-typo/string.stderr
error[E0412]: cannot find type `drain` in this scope
  --> $DIR/string.rs:4:19
   |
LL | fn test_drain(_x: drain){}
   |                   ^^^^^
   |                   |
   |                   not found in this scope
   |                   help: found a libstd struct with a similar name: `std::string::Drain`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
