src/test/ui/libstd-case-typo/string.rs
// checks case typos with libstd::string structs
fn main(){}

fn test_drain(_x: drain){}
//~^ ERROR: cannot find type `drain` in this scope
